--- a/packages/zevm-app-contracts/package.json
+++ b/packages/zevm-app-contracts/package.json
@@ -31,8 +31,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "4.9.3",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
-    "@zetachain/addresses": "workspace:^",
-    "@zetachain/addresses-tools": "workspace:^",
+    "@zetachain/addresses": "0.0.3",
+    "@zetachain/addresses-tools": "0.0.1",
     "@zetachain/protocol-contracts": "^0.0.6",
     "ethers": "5.6.8"
   }
