--- a/packages/example-contracts/package.json
+++ b/packages/example-contracts/package.json
@@ -34,8 +34,8 @@
     "@openzeppelin/contracts": "^4.9.3",
     "@uniswap/v2-periphery": "1.1.0-beta.0",
     "@uniswap/v3-periphery": "1.1.0",
-    "@zetachain/addresses": "workspace:^",
-    "@zetachain/addresses-tools": "workspace:^",
+    "@zetachain/addresses": "0.0.3",
+    "@zetachain/addresses-tools": "0.0.1",
     "@zetachain/protocol-contracts": "^0.0.7",
     "ethers": "5.6.8"
   }
